2002-02-16  Cristy  <cristy@mystic.es.dupont.com>,
  * Replaced -copy/-replace options with +/-write in the convert program.
  * Median filtering speed enhancement using skip list contributed by
    Mike Edmonds.

2002-02-14  Cristy  <cristy@mystic.es.dupont.com>,
  * Command line options now stay in effect for any image in command
    line order until a another option is encountered or if -noop is specified.

2002-02-07  Cristy  <cristy@mystic.es.dupont.com>,
  * SVG coders understands inline images.

2002-02-06  Cristy  <cristy@mystic.es.dupont.com>,
            Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * Made -scene consistent across all utilities.  -snaps replaces previous
    functionality of -scene for import program.

2002-01-30  Cristy  <cristy@mystic.es.dupont.com>,
  * Correctly draw arc when arc end/start are not integer
    (patch contributed by Giuliano Pochini).

2002-01-28  Cristy  <cristy@mystic.es.dupont.com>,
            Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * Geometry strings respect -gravity (e.g. -gravity SouthWest -crop
    100x100).
  * Postive offsets in geometry strings move within the image canvas
    with respect to the gravity (SouthWest gravity is similar to Postscript
    page offsets).

2002-01-24  Cristy  <cristy@mystic.es.dupont.com>
  * Use -trim to trim the edges of an image.
  * Palm pixmap supported contributed by Christopher R. Hawks.
  * Added -mask to the convert/mogrify programs to add clips masks to
    an image.

2002-01-21  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed occasional small memory leak associated with exceptions.
  * Persistent cache is no longer updated (MPC coder).

2002-01-20  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * Fixed some bugs in the uncompressed PGM and PPM reader/writer (pnm.c).

2002-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac: Removed test for libwmf/font.h.

2002-01-13  Leonard Rosenthol  <leonardr@lazerware.com>