@@ -23,6 +23,15 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-02-18  Cristy  &lt;cristy@mystic.es.dupont.com&gt;,
+  * Fixed memory overrun with -format option of the mogrify program.
+	* Labels were not positioned correctly rectly for VID format.
+
+2002-02-16  Cristy  &lt;cristy@mystic.es.dupont.com&gt;,
+  * Replaced -copy/-replace options with +/-write in the convert program.
+  * Median filtering speed enhancement using skip list contributed by
+    Mike Edmonds.
+
 2002-02-14  Cristy  &lt;cristy@mystic.es.dupont.com&gt;,
   * Command line options now stay in effect for any image in command
     line order until a another option is encountered or if -noop is specified.
